[package]
name = "wakatime-tweet-activity"
version = "0.1.0"
authors = ["InkoHX <inkohx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.20"
egg-mode = "0.16"
